Added more termination criteria for QTL algorithm. Added heuristics for tree score.